--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@biomejs/biome": "^1.5.2",
     "@builder.io/qwik": "^1.4.0",
     "@qwikdev/astro": "^0.4.4",
     "astro": "^4.2.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
