--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.0.0",
     "@biomejs/biome": "^1.5.2",
     "@builder.io/qwik": "^1.4.0",
     "@qwikdev/astro": "^0.4.4",
