--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.0.0",
-    "@biomejs/biome": "^1.5.2",
+    "@biomejs/biome": "1.5.2",
     "@builder.io/qwik": "^1.4.0",
     "@qwikdev/astro": "^0.4.4",
     "astro": "^4.2.1",
