--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "biome.format": "bunx @biomejs/biome format src/* --write",
+    "biome.lint": "bunx @biomejs/biome lint src/*",
+    "biome.check": "bunx @biomejs/biome check --apply src/*"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
