--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@builder.io/qwik": "^1.4.0",
     "@qwikdev/astro": "^0.4.4",
     "astro": "^4.2.1",
+    "firebase": "^10.7.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
